force-app/main/default/objects/Time_Off_Request__c/Time_Off_Request__c.object-meta.xml
<CustomObject>
    <description>Captures the time-off requests from trainers for management approval. Creates a Resource Absence record once approved.</description>
    <label>Time-Off Request</label>
    <nameField>
        <displayFormat>TOF-{00000}</displayFormat>
        <label>Time-Off Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time-Off Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>