force-app/main/default/objects/Time_Off_Request__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Captures the date the time-off request is submitted.</description>
    <inlineHelpText>Indicates the date the time-off request is submitted.</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>