force-app/main/default/objects/Time_Off_Request__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY() + 1)&amp;&apos; 3:59:00&apos;)</defaultValue>
    <description>Captures the date/time the time-off request ends.</description>
    <inlineHelpText>Indicates the date/time the time-off request ends.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>