force-app/main/default/objects/Time_Off_Request__c/fields/Other_Type_of_Absense_Requested__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Absense_Requested__c</fullName>
    <description>Captures the &quot;Other&quot; type of request.</description>
    <inlineHelpText>Indicates the &quot;Other&quot; type of request.</inlineHelpText>
    <label>Other Type of Absense Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>