force-app/main/default/objects/Time_Off_Request__c/fields/Reason_for_Absence__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Absence__c</fullName>
    <description>Captures the reason the time-off is being requested.</description>
    <inlineHelpText>Indicates the reason the time-off is being requested.</inlineHelpText>
    <label>Reason for Absence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>