force-app/main/default/objects/Time_Off_Request__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <description>Captures the Service Resource submitting the time-off request.</description>
    <inlineHelpText>Indicates the Service Resource  submitting the time-off request.</inlineHelpText>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Time-Off Requests</relationshipLabel>
    <relationshipName>Time_Off_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>