force-app/main/default/objects/Time_Off_Request__c/fields/Service_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Email__c</fullName>
    <description>Captures the email address off the Service Resource User for use with approval process. Populated via WFR</description>
    <inlineHelpText>Indicates the email address off the Service Resource User for use with approval process.</inlineHelpText>
    <label>Service Resource Email</label>
    <type>Email</type>
</CustomField>