force-app/main/default/objects/Time_Off_Request__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY())&amp;&apos; 04:00:00&apos;)</defaultValue>
    <description>Captures the date/time the time-off request beings.</description>
    <inlineHelpText>Indicates the date/time the time-off request beings.</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>