force-app/main/default/objects/Time_Off_Request__c/fields/Time_Off_Request__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Request__c</fullName>
    <displayFormat>TOF-{00000}</displayFormat>
    <label>Time-Off Request #</label>
    <type>AutoNumber</type>
</CustomField>