force-app/main/default/objects/Time_Off_Request__c/fields/Type_of_Absence_Requested__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Absence_Requested__c</fullName>
    <description>Captures the type of request being submitted.</description>
    <inlineHelpText>Indicates the type of request being submitted.</inlineHelpText>
    <label>Type of Absence Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Banked</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Jury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Saved for JHSC</fullName>
            </value>
            <value>
                <fullName>4DWW</fullName>
            </value>
            <value>
                <fullName>Unscheduled Work Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>