force-app/main/default/objects/Time_Off_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Absence_Requested__c</columns>
    <columns>Reason_for_Absence__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Service_Resource_Name__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>